# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "likefit"
version = "0.2.0"
description = "Fit data with least squares and other likelihood methods"
readme = "README.md"
authors = [{ name = "Diego Ravignani", email = "diego.ravignani@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["fit", "likelihood", "scipy"]
dependencies = [
    "scipy >= 1.9.3",
    "matplotlib >= 3.7.4"
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/ravignad/likefit"

[project.optional-dependencies]
dev = ["pip-tools","pandas","pytest"]

